@@ -1,3 +1,9 @@
+Mon Jul 17 23:34:37 CEST 2006  Christian Persch <chpe@gnome.org>
+
+	* src/fe-gnome/userlist-gui.c:
+	* data/xchat-gnome-ui.xml:
+	  - Add GUI to give OP status.
+
 Sun Jul 16 22:15:14 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/fe-gnome/text-entry.c:
